--- a/eng.html
+++ b/eng.html
@@ -76,7 +76,7 @@
 
       <div class="feature-box col-lg-4 fa-4x">
         <i class="icon fa-solid fa-duotone fa-computer"></i>
-        <h3>I want to learn the job as much as ı can</h3>
+        <h3>I want to learn the job as much as I can</h3>
       </div>
     </div>
 
@@ -153,7 +153,7 @@
             <p>11 Weeks long course</p>
             <p>%100 English</p>
             <p>C, Python , SQL...</p>
-            <a href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home"><button type="button" class="btn btn-dark btn-lg btn-block">Take a look</button></a>
+            <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0"><button type="button" class="btn btn-dark btn-lg btn-block">Take a look</button></a>
           </div>
         </div>
       </div>
@@ -169,9 +169,6 @@
           </div>
         </div>
       </div>
-
-
-
     </div>
   </section>
 
@@ -179,19 +176,17 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <h3 class="end-p">It's charming moment for contact with me !</h3>
+    <h3 class="end-p">It's a perfect moment for contact with me !</h3>
+    <a href="https://z-p15.www.instagram.com/klymert/"><i class="footer-br fa-brands fa-instagram fa-xl"></i></a>
+    <a href="https://www.linkedin.com/in/mertkalay/"><i class="footer-br fa-brands fa-linkedin fa-xl"></i></a>
+    <a href="mailto: mertkalay78@gmail.com"><i class="footer-br fa-solid fa-envelope fa-xl"></i></a>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-    <a href="https://z-p15.www.instagram.com/klymert/"><i class="footer-br fa-brands fa-instagram"></i></a>
-    <a href="www.linkedin.com/in/mertkalay"><i class="footer-br fa-brands fa-linkedin"></i></a>
-    <a href = "mailto: mertkalay78@gmail.com"><i class="footer-br fa-solid fa-envelope"></i></a>
     <p>© Copyright Mert Kalay</p>
-
   </footer>
 
 
