--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <div class="row">
       <div class="feature-box col-lg-4 fa-4x">
         <i class="icon fa-solid fa-circle-check"></i>
-        <h3>Ulaşım Kolaylığı</h3>
+        <h3>Ulaşım kolaylığı</h3>
         <p class="feat">Karabük'te yaşıyorum</p>
       </div>
 
       <div class="feature-box col-lg-4 fa-4x">
         <i class="icon fa-solid fa-heart"></i>
         <h3>İşimi seviyorum</h3>
-        <p class="feat">Teknolojiye atan kalpere !</p>
+        <p class="feat">Teknolojiye atan kalplere !</p>
       </div>
 
       <div class="feature-box col-lg-4 fa-4x">
@@ -155,7 +155,7 @@
             <p>11 Hafta uzunluğunda eğitim</p>
             <p>%100 İngilizce</p>
             <p>C, Python , SQL...</p>
-            <a href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home"><button type="button" class="btn btn-dark btn-lg btn-block">Göz At</button></a>
+            <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0"><button type="button" class="btn btn-dark btn-lg btn-block">Göz At</button></a>
           </div>
         </div>
       </div>
@@ -181,17 +181,17 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
     <h3 class="end-p">Bana ulaşmak için ne harika bir zaman !</h3>
+    <a href="https://z-p15.www.instagram.com/klymert/"><i class="footer-br fa-brands fa-instagram fa-xl"></i></a>
+    <a href="https://www.linkedin.com/in/mertkalay/"><i class="footer-br fa-brands fa-linkedin fa-xl "></i></a>
+    <a href="mailto: mertkalay78@gmail.com"><i class="footer-br fa-solid fa-envelope fa-xl "></i></a>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-    <a href="https://z-p15.www.instagram.com/klymert/"><i class="footer-br fa-brands fa-instagram"></i></a>
-    <a href="www.linkedin.com/in/mertkalay"><i class="footer-br fa-brands fa-linkedin"></i></a>
-    <a href = "mailto: mertkalay78@gmail.com"><i class="footer-br fa-solid fa-envelope"></i></a>
+
     <p>© Copyright Mert Kalay</p>
 
   </footer>
